<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_barcode_format"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_barcode_format"
        android:textSize="@dimen/text_size_medium_large"
        android:fontFamily="sans-serif-medium"
        android:textColor="@color/colorAccent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/margin_medium"/>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_gs1_prefix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorAccentOpacity"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="@dimen/margin_medium"
        app:layout_constraintTop_toBottomOf="@id/tv_barcode_format"
        android:layout_marginTop="@dimen/margin_medium">

        <EditText
            android:id="@+id/et_gs1_prefix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_medium"
            android:textColor="@color/colorAccent"
            android:fontFamily="sans-serif-regular"
            android:hint="@string/label_prefix"
            android:ems="7"
            android:inputType="number"
            android:maxLength="3"
            android:imeOptions="actionNext"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_manufacturer_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorAccentOpacity"
        app:layout_constraintStart_toEndOf="@id/til_gs1_prefix"
        android:layout_marginLeft="@dimen/margin_medium"
        app:layout_constraintTop_toBottomOf="@id/tv_barcode_format"
        android:layout_marginTop="@dimen/margin_medium">

        <EditText
            android:id="@+id/et_manufacturer_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_medium"
            android:textColor="@color/colorAccent"
            android:fontFamily="sans-serif-regular"
            android:hint="@string/label_manufacturer_code"
            android:ems="10"
            android:inputType="number"
            android:maxLength="4"
            android:imeOptions="actionNext"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_total_barcodes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorAccentOpacity"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="@dimen/margin_medium"
        app:layout_constraintTop_toBottomOf="@id/til_gs1_prefix"
        android:layout_marginTop="@dimen/margin_medium">

        <EditText
            android:id="@+id/et_total_barcodes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_medium"
            android:textColor="@color/colorAccent"
            android:fontFamily="sans-serif-regular"
            android:hint="@string/label_total_barcodes"
            android:ems="7"
            android:inputType="number"
            android:maxLength="3"
            android:imeOptions="actionNext"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_first_product_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorAccentOpacity"
        app:layout_constraintStart_toEndOf="@id/til_total_barcodes"
        android:layout_marginLeft="@dimen/margin_medium"
        app:layout_constraintTop_toBottomOf="@id/til_manufacturer_code"
        android:layout_marginTop="@dimen/margin_medium">

        <EditText
            android:id="@+id/et_first_product_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_medium"
            android:textColor="@color/colorAccent"
            android:fontFamily="sans-serif-regular"
            android:hint="@string/label_first_product_code"
            android:ems="10"
            android:inputType="number"
            android:maxLength="5"
            android:imeOptions="actionDone"/>

    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/btn_start_barcode_generation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/label_start_button"
        android:textAllCaps="false"
        android:fontFamily="sans-serif-medium"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimary"
        android:onClick="onBarcodeGenerationStarted"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="@dimen/margin_medium"
        app:layout_constraintTop_toBottomOf="@id/til_first_product_code"
        android:layout_marginTop="@dimen/margin_medium"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginRight="@dimen/margin_medium"/>

    <ProgressBar
        android:id="@+id/pb_loading_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_start_barcode_generation"/>

    <TextView
        android:id="@+id/tv_loading_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_please_wait"
        android:textSize="@dimen/text_size_medium"
        android:textColor="@color/colorAccent"
        android:fontFamily="sans-serif-regular"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="@id/pb_loading_indicator"
        app:layout_constraintRight_toRightOf="@id/pb_loading_indicator"
        app:layout_constraintTop_toBottomOf="@id/pb_loading_indicator"
        android:layout_marginTop="@dimen/padding_balance"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_barcode_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="@dimen/margin_medium"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="@dimen/margin_medium"
        app:layout_constraintTop_toBottomOf="@id/btn_start_barcode_generation"
        android:layout_marginTop="@dimen/margin_medium"
        app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>